<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/test_arrow_left" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnForward"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextColorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                style="@style/TextColorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/info_for_user"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAvatar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/test_add" />

                <TextView
                    style="@style/TextColorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/photo_avatar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnDocuments"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/test_add" />

                <TextView
                    style="@style/TextColorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/registration_documents" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:drawableStart="@drawable/test_user"
                android:hint="@string/name" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:drawableStart="@drawable/test_user"
                android:hint="@string/surname" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:drawableStart="@drawable/test_email"
                android:hint="@string/email" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:drawableStart="@drawable/test_password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:drawableStart="@drawable/test_password"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/btnForward"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/test_arrow_right" />


</RelativeLayout>